force-app/main/default/objects/Acc_Yearly_Revenue_Rollup__c/fields/Accounts__c.field-meta.xml
<CustomField>
    <fullName>Accounts__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Acc Yearly Revenue Rollups</relationshipLabel>
    <relationshipName>Acc_Yearly_Revenue_Rollups</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>