force-app/main/default/objects/Acc_Yearly_Revenue_Rollup__c/fields/Yearly_Actual_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Yearly_Actual_Revenue__c</fullName>
    <label>Yearly Actual Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>