force-app/main/default/objects/Acc_Yearly_Revenue_Rollup__c/fields/Yearly_Forecasted_Revenue_Weighted__c.field-meta.xml
<CustomField>
    <fullName>Yearly_Forecasted_Revenue_Weighted__c</fullName>
    <label>Yearly Forecasted Revenue(Weighted)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>