force-app/main/default/objects/Acc_Yearly_Revenue_Rollup__c/fields/Yearly_Revenue_Date__c.field-meta.xml
<CustomField>
    <fullName>Yearly_Revenue_Date__c</fullName>
    <description>Hold the date of the Yearly Revenue</description>
    <label>Yearly Revenue Date</label>
    <type>Date</type>
</CustomField>