force-app/main/default/objects/Acc_Yearly_Revenue_Rollup__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Yearly_Revenue_Date__c</columns>
    <columns>Accounts__c</columns>
    <columns>NAME</columns>
    <columns>Yearly_Actual_Revenue__c</columns>
    <columns>Yearly_Forecasted_Revenue__c</columns>
    <columns>Yearly_Forecasted_Revenue_Weighted__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>